--- a/src/sass/_PerrysburgRoom.scss
+++ b/src/sass/_PerrysburgRoom.scss
@@ -1,8 +1,10 @@
+.PerrysburgRoomWrap {
+  display: inline-block;
+}
 .Outline {
   margin: 0;
   padding: 0;
   border: 1px solid rgba(219, 0, 0, 0.52);
   text-align: left;
-  width: 500px;
   display: block;
 }
